# runwayzero

./: .env.example  .gitignore  README.md  push-to-prod-submission-guide.md  pyproject.toml
agent/: __init__.py  config.py  main.py
agent/prompts/: system.md
assets/: dashboard.html  flowchart.html
docs/submission-answers/: how-solving.md  problem-solved.md  use-of-claude.md  use-of-genspark.md
models/: __init__.py  cve.py  inventory.py  report.py
runwayzero_agent/: agent.py  config.py  errors.py  tool_registry.py
runwayzero_agent/cache/: genspark-CVE-2026-33626.json
runwayzero_agent/prompts/: system.md
runwayzero_agent/tools/: __init__.py  codecommit.py  genspark.py  sandbox.py  ssm.py  verify.py
scripts/: dry-run.sh  pre-demo-check.sh  preflight.sh  reset-demo.sh
tests/: __init__.py  conftest.py  test_agent.py  test_codecommit.py  test_config.py  test_errors.py  test_genspark.py  test_sandbox.py  test_sdk_smoke.py  test_ssm.py  test_ssrf.py  test_verify.py
tools/: __init__.py  codecommit.py  genspark.py  sandbox.py  ssm.py  verify.py
