[project]
name = "runwayzero-agent"
version = "0.1.0"
description = "RunwayZero — AI-Powered Vulnerability Impact Agent (hackathon demo)"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.97.0",
    "boto3==1.42.61",
    "requests==2.32.5",
    "anyio==4.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "moto==5.1.22",
    "responses==0.26.0",
    "fastapi==0.136.1",
    "httpx==0.28.1",
]

[project.scripts]
runwayzero-agent = "runwayzero_agent.agent:cli_main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
