[project]
name = "runwayzero-agent"
version = "0.1.0"
description = "RunwayZero — AI-Powered Vulnerability Impact Agent (hackathon demo)"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "moto>=5.0.0",
    "responses>=0.25.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
]

[project.scripts]
runwayzero-agent = "runwayzero_agent.agent:cli_main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
